# capstone

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bno055/share/bno055/: package.sh
install/nexus/lib/nexus/: control_nexus  joy_to_cmd_vel  odom_monitor  odom_serial_node  test  wheel_encoder
install/nexus/share/nexus/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_node
install/sllidar_ros2/share/ament_index/resource_index/parent_prefix_path/: sllidar_ros2
install/sllidar_ros2/share/sllidar_ros2/: local_setup.sh  package.sh
log/: latest_build
src/nexus/: setup.cfg  setup.py
src/nexus/launch/: nexus_full_system.launch.py
src/nexus/nexus/: control_nexus.py  joy_to_cmd_vel.py  odom_serial_node.py  wheel_encoder.py
