<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus</name>
  <version>0.0.0</version>
  <description>ROS2 serial bridge for Omni4WD base</description>

  <maintainer email="quietquiet35@gmail.com">hs</maintainer>
  <license>Apache-2.0</license>

  <!-- core -->
  <depend>rclpy</depend>

  <!-- messages -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <!-- optional but expected next -->
  <depend>nav_msgs</depend>

  <!-- runtime -->
  <exec_depend>python3-serial</exec_depend>

  <!-- launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
